# IdiotsMS

./: .env.example  .gitignore  README.md  database.sql  package.json
client/: .env.example  index.html  package.json
client/src/: App.vue  main.js
client/src/components/: Dashboard.vue  Login.vue  Register.vue
client/src/stores/: auth.js
server/: DEPLOYMENT.md  README.md  app.py  config.py  deploy.sh  gunicorn.conf.py  idiotsms.service  index.js  pyproject.toml  requirements.txt  run.py
